force-app/main/default/objects/Mayoral_Letters__c/Mayoral_Letters__c.object-meta.xml
<CustomObject>
    <description>This object will be used by Mike&#39;s Team for reporting on tasks that are being requested by internal and external users.</description>
    <label>Mayoral Letter</label>
    <nameField>
        <label>Mayoral Letters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mayoral Letters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>