force-app/main/default/objects/Mayoral_Letters__c/fields/Actual_Owner__c.field-meta.xml
<CustomField>
    <fullName>Actual_Owner__c</fullName>
    <description>The actual owner. Typically not Salesforce user</description>
    <inlineHelpText>The actual owner. Typically not Salesforce user</inlineHelpText>
    <label>Actual Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>