force-app/main/default/objects/Mayoral_Letters__c/fields/Are_there_other_groups_involved__c.field-meta.xml
<CustomField>
    <fullName>Are_there_other_groups_involved__c</fullName>
    <label>Are there other groups involved?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>