force-app/main/default/objects/Mayoral_Letters__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>The user the task is assigned to</description>
    <inlineHelpText>The user the task is assigned to</inlineHelpText>
    <label>Assigned To</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>