force-app/main/default/objects/Mayoral_Letters__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date the task is completed.</description>
    <inlineHelpText>Date the task is completed.</inlineHelpText>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>