force-app/main/default/objects/Mayoral_Letters__c/fields/Created_By__c.field-meta.xml
<CustomField>
    <fullName>Created_By__c</fullName>
    <description>The name of the user that created the record. This field is System generated</description>
    <formula>CreatedBy.FirstName+&#39; &#39;+  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the user that created the record. This field is System generated</inlineHelpText>
    <label>Created By</label>
    <type>Text</type>
</CustomField>