force-app/main/default/objects/Mayoral_Letters__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <description>The date the record was created This field is System generated</description>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The date the record was created This field is System generated</inlineHelpText>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>