force-app/main/default/objects/Mayoral_Letters__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>Date the task is due</description>
    <inlineHelpText>Date the task is due</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>