force-app/main/default/objects/Mayoral_Letters__c/fields/Internal_Source__c.field-meta.xml
<CustomField>
    <fullName>Internal_Source__c</fullName>
    <description>If the Request Originator is within the organization then select the unit/division within the organization.</description>
    <inlineHelpText>If the Request Originator is within the organization then select the unit/division within the organization.</inlineHelpText>
    <label>Internal Source</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Originator__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mayor&#39;s office</fullName>
            </value>
            <value>
                <fullName>DCM&#39;s office</fullName>
            </value>
            <value>
                <fullName>BGS</fullName>
            </value>
            <value>
                <fullName>Film</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>