force-app/main/default/objects/Mayoral_Letters__c/fields/Other_Internal_Source__c.field-meta.xml
<CustomField>
    <fullName>Other_Internal_Source__c</fullName>
    <description>Specify the other internal source not listed in the Internal source drop down field</description>
    <inlineHelpText>Specify the other internal source not listed in the Internal source drop down field</inlineHelpText>
    <label>Other Internal Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>