force-app/main/default/objects/Mayoral_Letters__c/fields/Other_Mayoral_Letters__c.field-meta.xml
<CustomField>
    <fullName>Other_Mayoral_Letters__c</fullName>
    <description>Specify the other Mayoral letters that is  not listed in the Type of Mayoral Letter drop down field</description>
    <inlineHelpText>Specify the other Mayoral letters that is  not listed in the Type of Mayoral Letter drop down field</inlineHelpText>
    <label>Other  Mayoral Letters</label>
    <length>100</length>
    <type>Text</type>
</CustomField>