force-app/main/default/objects/Mayoral_Letters__c/fields/Other_Response_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Other_Response_Communication_Channel__c</fullName>
    <description>Specify the other Response Communication Channel that is  not listed in the Request Communication Channel drop down field</description>
    <inlineHelpText>Specify the other Response Communication Channel that is  not listed in the Request Communication Channel drop down field</inlineHelpText>
    <label>Other Response Communication Channel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>