force-app/main/default/objects/Mayoral_Letters__c/fields/Outgoing_Recipients_cc__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Recipients_cc__c</fullName>
    <label>Outgoing Recipients (cc)</label>
    <type>TextArea</type>
</CustomField>