force-app/main/default/objects/Mayoral_Letters__c/fields/Outgoing_Recipients_To__c.field-meta.xml
<CustomField>
    <fullName>Outgoing_Recipients_To__c</fullName>
    <label>Outgoing Recipients (To)</label>
    <type>TextArea</type>
</CustomField>