force-app/main/default/objects/Mayoral_Letters__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <description>The reason why the request is being cancelled</description>
    <inlineHelpText>The reason why the request is being cancelled</inlineHelpText>
    <label>Reason for Cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>