force-app/main/default/objects/Mayoral_Letters__c/fields/Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Received_Date__c</fullName>
    <description>Date the request was received</description>
    <inlineHelpText>Date the request was received</inlineHelpText>
    <label>Received Date</label>
    <type>Date</type>
</CustomField>