force-app/main/default/objects/Mayoral_Letters__c/fields/Request_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Request_Communication_Channel__c</fullName>
    <description>The method/means/mode in which the request was made</description>
    <inlineHelpText>The method/means/mode in which the request was made</inlineHelpText>
    <label>Request Communication Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DCM Clerk’s mail</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>