force-app/main/default/objects/Mayoral_Letters__c/fields/Request_Originator__c.field-meta.xml
<CustomField>
    <fullName>Request_Originator__c</fullName>
    <description>The source of the request. This could be within the organization or external to the organization.</description>
    <inlineHelpText>The source of the request. This could be within the organization or external to the organization.</inlineHelpText>
    <label>Request Originator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>