force-app/main/default/objects/Mayoral_Letters__c/fields/Response_Communication_Channel__c.field-meta.xml
<CustomField>
    <fullName>Response_Communication_Channel__c</fullName>
    <description>The method/means/mode in which the response was sent</description>
    <inlineHelpText>The method/means/mode in which the response was sent</inlineHelpText>
    <label>Response Communication Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interoffice</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>