force-app/main/default/objects/Mayoral_Letters__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In progress - CMO</fullName>
            </value>
            <value>
                <fullName>In progress - DCM</fullName>
            </value>
            <value>
                <fullName>In progress  - GM</fullName>
            </value>
            <value>
                <fullName>In progress - Letter Mailed</fullName>
            </value>
            <value>
                <fullName>In progress - Letter Sent</fullName>
            </value>
            <value>
                <fullName>In Progress - Mayor’s office</fullName>
            </value>
            <value>
                <fullName>In Progress - Protocol</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>