force-app/main/default/objects/Mayoral_Letters__c/fields/Type_of_Mayoral_Letter__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Mayoral_Letter__c</fullName>
    <description>The type of Mayoral letter.</description>
    <inlineHelpText>The type of Mayoral letter.</inlineHelpText>
    <label>Type of Mayoral Letter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Letter of Support</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>