force-app/main/default/objects/Mayoral_Letters__c/fields/Who__c.field-meta.xml
<CustomField>
    <fullName>Who__c</fullName>
    <description>The name of the individual that sent the request</description>
    <inlineHelpText>The name of the individual that sent the request</inlineHelpText>
    <label>Who?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>