force-app/main/default/objects/Mayoral_Letters__c/listViews/Mayoral_Letters.listView-meta.xml
<ListView>
    <fullName>Mayoral_Letters</fullName>
    <columns>NAME</columns>
    <columns>Type_of_Mayoral_Letter__c</columns>
    <columns>Actual_Owner__c</columns>
    <columns>Status__c</columns>
    <columns>Created_By__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>Mayoral Letters</label>
</ListView>