force-app/main/default/objects/Mayoral_Letters__c/listViews/Tasha_s_View.listView-meta.xml
<ListView>
    <fullName>Tasha_s_View</fullName>
    <columns>NAME</columns>
    <columns>Actual_Owner__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Created_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In progress  - GM</value>
    </filters>
    <label>Tasha&#39;s View</label>
</ListView>